--- a/src/styles/index.sass
+++ b/src/styles/index.sass
@@ -8,5 +8,13 @@
 @import "./blocks/sidebar"
 @import "./blocks/slider"
 @import "./blocks/social"
-@import "../../node_modules/slick-carousel/slick/slick.css"
-@import "../../node_modules/slick-carousel/slick/slick-theme.css"
+
+
+
+@import "./fonts.css"
+@import "./global.css"
+@import "./main.css"
+@import "./responsive.css"
+@import "./style-max-width-1450.css"
+@import "./style-max-width-1200.css"
+@import "./style-max-width-900.css"
