--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -18,6 +18,11 @@ body {
   }
 }
 
+#___gatsby, #gatsby-focus-wrapper {
+  height: 100%;
+  width: 100%;
+}
+
 .name-container {
   color: rgba(255, 255, 255, 0.58);
   width: 100%;
