Add cursor styles

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -53,6 +53,10 @@ body, html {
   font-smoothing: antialiased;
 }
 
+body {
+  cursor: url('/cursor.svg'), auto;
+}
+
 ol, ul {
   list-style: none;
 }
