--- a/src/styles/style-max-width-1450.css
+++ b/src/styles/style-max-width-1450.css
@@ -144,6 +144,11 @@
     width: 60px;
   }
 
+
+  .header-navigation .nav-right .nav-item {
+    padding: 13px 40px;
+  }
+
 }
 
 @media screen and (max-width: 1350px) {
