--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -22,6 +22,9 @@ body {
   height: 100%;
   width: 100%;
 }
+.header-responsive-container {
+  display: none;
+}
 
 .name-container {
   color: rgba(255, 255, 255, 0.58);
