--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -344,6 +344,11 @@ input[type=number]::-webkit-outer-spin-button {
   justify-content: space-between;
 }
 
+.flex-column {
+  display: flex;
+  flex-direction: column;
+}
+
 .flex-center-vertically {
   display: flex;
   flex-direction: column;
