--- a/src/styles/style-max-width-900.css
+++ b/src/styles/style-max-width-900.css
@@ -84,6 +84,11 @@
     margin: 6px 0;
   }
 
+  .sidebar ul {
+    top: -60px;
+    padding: 70px 20px 20px 20px;
+  }
+
 }
 
 @media screen and (max-height: 500px) {
