--- a/src/styles/blocks/sidebar.sass
+++ b/src/styles/blocks/sidebar.sass
@@ -77,7 +77,7 @@ header
 
 .sidebar
   transform: translate(-100%, 0)
-  transition: all 1s
+  transition: all .5s
 
   &.open
     transform: translate(0, 0)
@@ -103,20 +103,20 @@ header
   z-index: 10
 
   .bar1, .bar2, .bar3
-    width: 22px
-    height: 3px
+    width: 24px
+    height: 2px
     background-color: black
     margin: 6px 0
     transition: 0.4s
 
   &.open
     .bar1
-      -webkit-transform: rotate(-45deg) translate(-6px, 6px)
-      transform: rotate(-45deg) translate(-6px, 6px)
+      -webkit-transform: rotate(-45deg) translate(-4px, 6px)
+      transform: rotate(-45deg) translate(-4px, 6px)
 
     .bar2
       opacity: 0
 
     .bar3
-      -webkit-transform: rotate(45deg) translate(-6px, -8px)
-      transform: rotate(45deg) translate(-6px, -8px)
+      -webkit-transform: rotate(45deg) translate(-5px, -8px)
+      transform: rotate(45deg) translate(-5px, -8px)
